# matlib

./: CMakeLists.txt  CMakePresets.json  CmakeLists.txt  CmakePresets.json  README.md
include/: matrix.hpp
src/: main.cpp  matrix.cpp
tests/: CMakeLists.txt  test_main.cpp
